LPD-49265 Decouple Sidecar core: Make SidecarRuntimeConfiguration an Externalizable POJO to avoid dependency on ES classes